var searchData=
[
  ['add_5ftx_5',['add_tx',['../classlibzecale_1_1application__pool.html#afa023865f49623eea63a91e84de9bbea',1,'libzecale::application_pool']]],
  ['aggregated_5ftransaction_2epy_6',['aggregated_transaction.py',['../aggregated__transaction_8py.html',1,'']]],
  ['aggregated_5ftransaction_5ffrom_5fproto_7',['aggregated_transaction_from_proto',['../namespacezecale_1_1core_1_1proto__utils.html#ab771e5f94d8952427d3275d104f614eb',1,'zecale::core::proto_utils']]],
  ['aggregatedtransaction_8',['AggregatedTransaction',['../classzecale_1_1core_1_1aggregated__transaction_1_1AggregatedTransaction.html',1,'zecale::core::aggregated_transaction']]],
  ['aggregator_5fcircuit_9',['aggregator_circuit',['../classlibzecale_1_1aggregator__circuit.html',1,'libzecale::aggregator_circuit&lt; wppT, wsnarkT, nverifierT, NumProofs &gt;'],['../classlibzecale_1_1aggregator__circuit.html#aab3678b872538507c850545945d809a3',1,'libzecale::aggregator_circuit::aggregator_circuit(const size_t inputs_per_nested_proof)'],['../classlibzecale_1_1aggregator__circuit.html#a925a1b97cfc234c9d6d07e812f1eff8d',1,'libzecale::aggregator_circuit::aggregator_circuit(const aggregator_circuit &amp;other)=delete'],['../aggregator__server_8cpp.html#ace85208654e1f01a89387b242e4facfd',1,'aggregator_circuit():&#160;aggregator_server.cpp']]],
  ['aggregator_5fcircuit_2ehpp_10',['aggregator_circuit.hpp',['../aggregator__circuit_8hpp.html',1,'']]],
  ['aggregator_5fcircuit_2etcc_11',['aggregator_circuit.tcc',['../aggregator__circuit_8tcc.html',1,'']]],
  ['aggregator_5fclient_2epy_12',['aggregator_client.py',['../aggregator__client_8py.html',1,'']]],
  ['aggregator_5fconfig_2epy_13',['aggregator_config.py',['../aggregator__config_8py.html',1,'']]],
  ['aggregator_5fconfig_5ffile_14',['aggregator_config_file',['../classzecale_1_1cli_1_1command__context_1_1CommandContext.html#a77e8d30ef58c498455a42c831608eb6c',1,'zecale::cli::command_context::CommandContext']]],
  ['aggregator_5fconfig_5ffile_5fdefault_15',['AGGREGATOR_CONFIG_FILE_DEFAULT',['../namespacezecale_1_1cli_1_1defaults.html#a55aff0f420ce7c9e3c0191cd1baec4f6',1,'zecale::cli::defaults']]],
  ['aggregator_5fconfiguration_5ffrom_5fproto_16',['aggregator_configuration_from_proto',['../namespacezecale_1_1core_1_1proto__utils.html#a1af21cf3e75e9b6bd7804bcf12f84fc3',1,'zecale::core::proto_utils']]],
  ['aggregator_5fconfiguration_5fto_5fproto_17',['aggregator_configuration_to_proto',['../namespacelibzecale.html#a97b02092ecfb2e25b0069d09192aca7c',1,'libzecale']]],
  ['aggregator_5fgadget_18',['aggregator_gadget',['../classlibzecale_1_1aggregator__gadget.html',1,'libzecale::aggregator_gadget&lt; wppT, nverifierT, NumProofs &gt;'],['../classlibzecale_1_1aggregator__gadget.html#a565a8ca78124364b8e0de4adf36d8ab3',1,'libzecale::aggregator_gadget::aggregator_gadget()']]],
  ['aggregator_5fgadget_2ehpp_19',['aggregator_gadget.hpp',['../aggregator__gadget_8hpp.html',1,'']]],
  ['aggregator_5fgadget_2etcc_20',['aggregator_gadget.tcc',['../aggregator__gadget_8tcc.html',1,'']]],
  ['aggregator_5fserver_21',['aggregator_server',['../classaggregator__server.html',1,'aggregator_server'],['../classzecale_1_1cli_1_1command__context_1_1CommandContext.html#a4b6e33c678034582718dc455ada32980',1,'zecale.cli.command_context.CommandContext.aggregator_server()'],['../classaggregator__server.html#a298c389744aa124e9cc3819fd5d41468',1,'aggregator_server::aggregator_server()']]],
  ['aggregator_5fserver_2ecpp_22',['aggregator_server.cpp',['../aggregator__server_8cpp.html',1,'']]],
  ['aggregator_5fserver_5fendpoint_5fdefault_23',['AGGREGATOR_SERVER_ENDPOINT_DEFAULT',['../namespacezecale_1_1cli_1_1defaults.html#a97a654810a9f09c9f06a9c4d60ccad63',1,'zecale::cli::defaults']]],
  ['aggregator_5fverification_5fkey_5ffile_5fdefault_24',['AGGREGATOR_VERIFICATION_KEY_FILE_DEFAULT',['../namespacezecale_1_1cli_1_1defaults.html#ab7d6b80873fc574d78a0cae808c56f80',1,'zecale::cli::defaults']]],
  ['aggregatorclient_25',['AggregatorClient',['../classzecale_1_1core_1_1aggregator__client_1_1AggregatorClient.html',1,'zecale::core::aggregator_client']]],
  ['aggregatorconfiguration_26',['AggregatorConfiguration',['../classzecale_1_1core_1_1aggregator__config_1_1AggregatorConfiguration.html',1,'zecale::core::aggregator_config']]],
  ['app_5fname_27',['app_name',['../classzecale_1_1core_1_1aggregated__transaction_1_1AggregatedTransaction.html#a13a402ae1709f9fe50e778b5f3be031a',1,'zecale.core.aggregated_transaction.AggregatedTransaction.app_name()'],['../classzecale_1_1core_1_1nested__transaction_1_1NestedTransaction.html#a9dca5e755a94d45dd09afc1b9e6edb2b',1,'zecale.core.nested_transaction.NestedTransaction.app_name()']]],
  ['application_5finstance_5ffile_5fdefault_28',['APPLICATION_INSTANCE_FILE_DEFAULT',['../namespacezecale_1_1cli_1_1defaults.html#a9d89a579a0590eba3b55c7c749a8ff4a',1,'zecale::cli::defaults']]],
  ['application_5fname_29',['application_name',['../classlibzecale_1_1nested__transaction.html#ad8750b7c8105cb523900788224bbf7f5',1,'libzecale::nested_transaction']]],
  ['application_5fpool_30',['application_pool',['../classlibzecale_1_1application__pool.html',1,'libzecale::application_pool&lt; nppT, nsnarkT, NumProofs &gt;'],['../classlibzecale_1_1application__pool.html#aaba9c3b8f603eb76fe184dcc1dfe9b3f',1,'libzecale::application_pool::application_pool(const std::string &amp;name, const typename nsnarkT::verification_key &amp;vk)'],['../classlibzecale_1_1application__pool.html#aa1949cf64a5893396505b7948df0a3f4',1,'libzecale::application_pool::application_pool(const application_pool &amp;other)=delete']]],
  ['application_5fpool_2ehpp_31',['application_pool.hpp',['../application__pool_8hpp.html',1,'']]],
  ['application_5fpool_2etcc_32',['application_pool.tcc',['../application__pool_8tcc.html',1,'']]],
  ['application_5fverification_5fkey_5ffile_5fdefault_33',['APPLICATION_VERIFICATION_KEY_FILE_DEFAULT',['../namespacezecale_1_1cli_1_1defaults.html#a15f276dbabe2be685493863d7a1be0a4',1,'zecale::cli::defaults']]]
];
