var searchData=
[
  ['name_129',['name',['../classlibzecale_1_1application__pool.html#ad3b96bacf3df97b10d8333a6fe1594d9',1,'libzecale::application_pool::name()'],['../namespacesetup.html#ab3a7a0638d76a01367c5bc3cc699447f',1,'setup.name()']]],
  ['nested_5fpairing_5fparameters_130',['nested_pairing_parameters',['../classzecale_1_1core_1_1aggregator__config_1_1AggregatorConfiguration.html#a67f2135a2fe4a8c2b32b302bd5f5415f',1,'zecale::core::aggregator_config::AggregatorConfiguration']]],
  ['nested_5fparameters_131',['nested_parameters',['../classzecale_1_1core_1_1aggregated__transaction_1_1AggregatedTransaction.html#a6bda268fac5822b2485d6b697a10c71c',1,'zecale::core::aggregated_transaction::AggregatedTransaction']]],
  ['nested_5fsnark_132',['nested_snark',['../classzecale_1_1core_1_1aggregator__config_1_1AggregatorConfiguration.html#a06dab376042eb6f4a2f789d1d5d271e3',1,'zecale::core::aggregator_config::AggregatorConfiguration']]],
  ['nested_5fsnark_5fname_133',['nested_snark_name',['../classzecale_1_1core_1_1aggregator__config_1_1AggregatorConfiguration.html#aed4c6c67082263f442ce8463b13358d9',1,'zecale::core::aggregator_config::AggregatorConfiguration']]],
  ['nested_5ftransaction_134',['nested_transaction',['../classlibzecale_1_1nested__transaction.html',1,'libzecale::nested_transaction&lt; nppT, nsnarkT &gt;'],['../classlibzecale_1_1nested__transaction.html#afbf3ce1d9d4982a343e37e1a35f39180',1,'libzecale::nested_transaction::nested_transaction()'],['../classlibzecale_1_1nested__transaction.html#a665b4c0370714f632cdcfcdb65b13416',1,'libzecale::nested_transaction::nested_transaction(const std::string &amp;application_name, const libzeth::extended_proof&lt; nppT, nsnarkT &gt; &amp;extended_proof, const std::vector&lt; uint8_t &gt; &amp;parameters, uint32_t fee_wei=0)']]],
  ['nested_5ftransaction_2ehpp_135',['nested_transaction.hpp',['../nested__transaction_8hpp.html',1,'']]],
  ['nested_5ftransaction_2epy_136',['nested_transaction.py',['../nested__transaction_8py.html',1,'']]],
  ['nested_5ftransaction_2etcc_137',['nested_transaction.tcc',['../nested__transaction_8tcc.html',1,'']]],
  ['nested_5ftransaction_5ffrom_5fproto_138',['nested_transaction_from_proto',['../namespacelibzecale.html#abf1891470fc4fbbb08b1ca1747b45d03',1,'libzecale']]],
  ['nested_5ftransaction_5fto_5fproto_139',['nested_transaction_to_proto',['../namespacezecale_1_1core_1_1proto__utils.html#a7b4e35bcf95ff9e3105bb635ac2f2473',1,'zecale::core::proto_utils']]],
  ['nested_5fverification_5fkey_5fhash_140',['nested_verification_key_hash',['../namespacezecale_1_1cli_1_1zecale__nested__verification__key__hash.html#a7e0eea5469def8c8c2dbfa83ff4efaee',1,'zecale::cli::zecale_nested_verification_key_hash']]],
  ['nestedtransaction_141',['NestedTransaction',['../classzecale_1_1core_1_1nested__transaction_1_1NestedTransaction.html',1,'zecale::core::nested_transaction']]],
  ['npp_142',['npp',['../aggregator__server_8cpp.html#ade67c62be5a39a8fd72ff190852d29f8',1,'aggregator_server.cpp']]],
  ['nsnark_143',['nsnark',['../classlibzecale_1_1verification__key__hash__gadget.html#a9b4df192e52c4175411e0673557156a4',1,'libzecale::verification_key_hash_gadget::nsnark()'],['../aggregator__server_8cpp.html#a7fd62131a9c3260108044f2def8d0014',1,'nsnark():&#160;aggregator_server.cpp']]],
  ['null_5fhash_5fgadget_144',['null_hash_gadget',['../classlibzecale_1_1null__hash__gadget.html',1,'libzecale::null_hash_gadget&lt; FieldT &gt;'],['../classlibzecale_1_1null__hash__gadget.html#ad5a8d68f3675ff88a86fced7dec7de90',1,'libzecale::null_hash_gadget::null_hash_gadget()']]],
  ['null_5fhash_5fgadget_2ehpp_145',['null_hash_gadget.hpp',['../null__hash__gadget_8hpp.html',1,'']]],
  ['null_5fhash_5fgadget_2etcc_146',['null_hash_gadget.tcc',['../null__hash__gadget_8tcc.html',1,'']]],
  ['num_5fprimary_5finputs_147',['num_primary_inputs',['../classlibzecale_1_1aggregator__circuit.html#a36359154376b74b05493ffd6b4186be0',1,'libzecale::aggregator_circuit']]]
];
