var searchData=
[
  ['name_396',['name',['../classlibzecale_1_1application__pool.html#ad3b96bacf3df97b10d8333a6fe1594d9',1,'libzecale::application_pool']]],
  ['nested_5ftransaction_397',['nested_transaction',['../classlibzecale_1_1nested__transaction.html#afbf3ce1d9d4982a343e37e1a35f39180',1,'libzecale::nested_transaction::nested_transaction()'],['../classlibzecale_1_1nested__transaction.html#a665b4c0370714f632cdcfcdb65b13416',1,'libzecale::nested_transaction::nested_transaction(const std::string &amp;application_name, const libzeth::extended_proof&lt; nppT, nsnarkT &gt; &amp;extended_proof, const std::vector&lt; uint8_t &gt; &amp;parameters, uint32_t fee_wei=0)']]],
  ['nested_5ftransaction_5ffrom_5fproto_398',['nested_transaction_from_proto',['../namespacelibzecale.html#abf1891470fc4fbbb08b1ca1747b45d03',1,'libzecale']]],
  ['nested_5ftransaction_5fto_5fproto_399',['nested_transaction_to_proto',['../namespacezecale_1_1core_1_1proto__utils.html#a7b4e35bcf95ff9e3105bb635ac2f2473',1,'zecale::core::proto_utils']]],
  ['nested_5fverification_5fkey_5fhash_400',['nested_verification_key_hash',['../namespacezecale_1_1cli_1_1zecale__nested__verification__key__hash.html#a7e0eea5469def8c8c2dbfa83ff4efaee',1,'zecale::cli::zecale_nested_verification_key_hash']]],
  ['null_5fhash_5fgadget_401',['null_hash_gadget',['../classlibzecale_1_1null__hash__gadget.html#ad5a8d68f3675ff88a86fced7dec7de90',1,'libzecale::null_hash_gadget']]],
  ['num_5fprimary_5finputs_402',['num_primary_inputs',['../classlibzecale_1_1aggregator__circuit.html#a36359154376b74b05493ffd6b4186be0',1,'libzecale::aggregator_circuit']]]
];
